# bloom-development-extension

./: --hash  .gitattributes  .gitignore  .vscodeignore  CHANGELOG.md  COMPILE_RUN_COMMANDS.txt  README.md  all_tree.txt  brain.config.json  brain_cli.py  build-all-help.txt  build-all.py  build.ps1  build.py  build_brain.ps1  context_cleanup.py  darwin_versions.txt  fix_categories.py  help.txt  linux_versions.txt  nohup.out  output.txt  package-lock.json  package.json  query  read_chrome_log.py  run_grep_analysis.py  setup.py  src.tar  start  stop_delete_appdata.ps1  stop_systems_manually.ps1  stop_systems_manually_delete_appdata.ps1  synch_brain.py  tree.txt  tsconfig.json  verify-brain.ps1  windows_versions.txt
brain/: ADDING_DEPENDENCIES.md  __build__.py  __main__.py  commands.md  entry.py  prepare_runtime_libs.py  pyproject.toml  requirements.txt
brain/build_deploy/: __init__.py  brain.spec  brain.spec.bck  build_main.py  bump_version.py  generate_build_module.py  generate_command_loader.py  generate_commit.py  update_spec_hiddenimports.py  update_spec_metadata.py  update_version.py  versions.json
brain/build_deploy/commits/brain/: 1_semantic-changelog_2026-01-11.txt
brain/build_multiplatform/: build.py
brain/build_multiplatform/shared/: __init__.py  platform_detector.py  telemetry_helper.py
brain/cli/: __init__.py  base.py  categories.py  command_loader.py  help_renderer.py  registry.py
brain/commands/: __init__.py  init.py
brain/commands/ai/: __init__.py
brain/commands/ai/claude/: __init__.py  claude_keys_add.py  claude_keys_delete.py  claude_keys_list.py  (+2 more)
brain/commands/bisp/: semantic_query.py  vectorize.py
brain/commands/chrome/: chrome.py
brain/commands/context/: generate.py
brain/commands/extension/: __init__.py  backups.py  install.py  update.py  verify.py
brain/commands/filesystem/: compress.py  tree.py
brain/commands/gemini/: __init__.py  keys_add.py  keys_delete.py  keys_stats.py
brain/commands/github/: auth.py  auth_login.py  auth_logout.py  auth_status.py  clone.py  orgs.py  orgs_list.py  repos.py  repos_list.py
brain/commands/health/: __init__.py  dev_check.py  full_stack.py  native_ping.py  onboarding_check.py  onboarding_status.py  websocket_status.py
brain/commands/intent/: add_turn.py  build_payload.py  create.py  delete.py  download.py  finalize.py  get.py  hydrate.py  list.py  lock.py  merge.py  parse.py  plan.py  recover.py  router_prompt.md  stage.py  submit.py  unlock.py  update.py  validate.py
brain/commands/ionpump/: __init__.py  auth.ion  ionpump.py  ionpump_inspect.py  ionpump_reload.py  ionpump_test.py  ionpump_validate.py  versions.json
brain/commands/logs/: logs.py
brain/commands/nucleus/: create.py  create_exp_intent.py  delete.py  exp_discovery_turn.py  exp_export_findings.py  get.py  info.py  link.py  list.py  list_projects.py  onboarding_complete.py  onboarding_status.py  onboarding_steps_loader.py  project_info.py  status.py  sync.py
brain/commands/profile/: accounts.py  profiles.py  profiles_launches_command.py
brain/commands/project/: add.py  clone_and_add.py  detect.py  load.py  nucleus.py
brain/commands/runtime/: __init__.py  run.py
brain/commands/server/: server.py
brain/commands/service/: service.py
brain/commands/synapse/: synapse_host_cli.py  synapse_host_init_cli.py
brain/commands/system/: help_docs.py  info.py  info_flags.py  release_info.py  system_specs.py  version_flags.py
brain/commands/twitter/: __init__.py  auth.py
brain/core/: __init__.py  bloom_project_inspector.py  download_manager.py  intent_manager.py  nucleus_inspector.py  nucleus_manager.py  project_manager.py  tree_manager.py
brain/core/bisp/: chroma_client.py  embedding_generator.py  ollama_manager.py
brain/core/browser/: landing_generator.py  profile_manager.py
brain/core/chrome/: __init__.py  log_reader.py  mining_log_reader.py  net_log_analyzer.py
brain/core/context/: __init__.py  detector.py.backup  generate.py  manager.py  strategy_base.py  strategy_loader.py
brain/core/context_planning/: enriched_tree_generator.py  gemini_router.py  payload_builder.py
brain/core/extension/: __init__.py  manager.py
brain/core/filesystem/: __init__.py  code_compressor.py  files_compressor.py  files_extractor.py  tree_all_manager.py  tree_manager.py
brain/core/git/: executor.py
brain/core/github/: __init__.py  api_client.py  credentials.py
brain/core/health/: __init__.py  dev_environment_manager.py  full_stack_manager.py  native_host_manager.py  onboarding_status_manager.py  websocket_status_manager.py
brain/core/intent/: manager.py  merge_manager.py  recovery_manager.py  response_parser.py  staging_manager.py  validation_manager.py
brain/core/ionpump/: __init__.py  ionpump_executor.py  ionpump_ipc.py  ionpump_loader.py  ionpump_manager.py  ionpump_models.py  ionpump_registry.py  ionpump_state.py  ionpump_validator.py  synapse_ipc_server.py
brain/core/logs/: logs_manager.py
brain/core/profile/: __init__.py  bloom_launcher_client.py  discovery_generator.py  landing_generator.py  launch_history_reader.py  path_resolver.py  profile_accounts.py  profile_create.py  profile_launcher.py  profile_manager.py  profile_state_manager.py  session1_launcher.py
brain/core/project/: __init__.py  clone_manager.py  linker.py  models.py  scanner.py
brain/core/server/: server_event_bus.py  server_manager.py
brain/core/service/: server_manager.py
brain/core/synapse/: __init__.py  synapse_exceptions.py  synapse_host_init_manager.py  synapse_manager.py  synapse_protocol.py
brain/core/system/: __init__.py  help_docs_manager.py  info_manager.py  metadata_manager.py
brain/core/twitter/: auth_manager.py
brain/help/: brain-ai-full.json  brain-ai-schema.json  brain-legacy.json  help-full.txt  help.txt
brain/runtime_libs/: libs_to_copy.txt
brain/shared/: context.py  credentials.py  environment.py  logger.py  paths.py  profile_logger.py  runtime_resolver.py
brain/shared/credentials/: __init__.py  base.py  claude_manager.py  openai_manager.py  unified_manager.py  xai_manager.py
brain/shared/shared/: context.py
(+1880 files in other folders)
