[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "brain-cli"
version = "0.1.1"
description = "Brain - Sistema de Intenciones Técnicas para Bloom"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich",
]

[project.scripts]
brain = "brain.__main__:main"
